--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -19,9 +19,8 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      
       - name: Debug GHCR username
-        run: echo USERNAME=${{ secrets.GHCR_USERNAME }}
+        run: echo "USERNAME = ${{ secrets.GHCR_USERNAME }}"
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
