--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -7,6 +7,7 @@ on:
 
 env:
   IMAGE_NAME: todo-app-jdbc-spring-api
+  GHCR_USER: sacireda   # <-- ton username en minuscule !
 
 jobs:
   build:
@@ -19,14 +20,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Debug GHCR username
-        run: echo "USERNAME = ${{ secrets.GHCR_USERNAME }}"
-
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ secrets.GHCR_USERNAME }}
+          username: ${{ env.GHCR_USER }}
           password: ${{ secrets.GHCR_TOKEN }}
 
       - name: Build and Push Docker Image
@@ -35,4 +33,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ghcr.io/${{ secrets.GHCR_USERNAME }}/${{ env.IMAGE_NAME }}:latest
+          tags: ghcr.io/${{ env.GHCR_USER }}/${{ env.IMAGE_NAME }}:latest
