--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -7,7 +7,6 @@ on:
 
 env:
   IMAGE_NAME: todo-app-jdbc-spring-api
-  GHCR_USER: sacireda   # <-- ton username en minuscule !
 
 jobs:
   build:
@@ -20,17 +19,20 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Debug GHCR username
+        run: echo "USERNAME=${{ secrets.GHCR_USERNAME }}"
+
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ env.GHCR_USER }}
+          username: ${{ secrets.GHCR_USERNAME }}
           password: ${{ secrets.GHCR_TOKEN }}
 
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v5
         with:
-          context: .
-          file: ./Dockerfile
+          context: ./api
+          file: ./api/Dockerfile
           push: true
-          tags: ghcr.io/${{ env.GHCR_USER }}/${{ env.IMAGE_NAME }}:latest
+          tags: ghcr.io/${{ secrets.GHCR_USERNAME }}/${{ env.IMAGE_NAME }}:latest
