--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -16,11 +16,20 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Set up JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+
+      - name: Build application with Maven
+        run: mvn -B -f api/pom.xml clean package
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
       - name: Debug GHCR username
-        run: echo "USERNAME=${{ secrets.GHCR_USERNAME }}"
+        run: echo USERNAME=${{ secrets.GHCR_USERNAME }}
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
