--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -7,29 +7,30 @@ on:
 
 env:
   IMAGE_NAME: todo-app-jdbc-spring-api
+  GHCR_USERNAME: sacireda   # 👈 tout en lowercase obligatoire
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to GitHub Container Registry
+      - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
+          username: sacireda
           password: ${{ secrets.GHCR_TOKEN }}
 
-      - name: Build and Push Docker Image
+      - name: Build and push
         uses: docker/build-push-action@v5
         with:
           context: ./api
           file: ./api/Dockerfile
           push: true
-          tags: ghcr.io/${{ github.actor }}/${{ env.IMAGE_NAME }}:latest
+          tags: ghcr.io/sacireda/todo-app-jdbc-spring-api:latest
