--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: .
+          context: ./api
           file: ./api/Dockerfile
           push: true
           tags: ghcr.io/sacireda/todo-app-jdbc-spring-api:latest
