--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -7,7 +7,6 @@ on:
 
 env:
   IMAGE_NAME: todo-app-jdbc-spring-api
-  GHCR_USERNAME: sacireda
 
 jobs:
   build:
@@ -17,31 +16,28 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup JDK 21
+      - name: Set up JDK
         uses: actions/setup-java@v4
         with:
-          distribution: temurin
           java-version: 21
+          distribution: temurin
 
       - name: Build JAR with Maven
         run: |
           cd api
-          mvn -B clean package
+          mvn -B -DskipTests clean package
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to GHCR
+      - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ env.GHCR_USERNAME }}
+          username: ${{ secrets.GHCR_USERNAME }}
           password: ${{ secrets.GHCR_TOKEN }}
 
-      - name: Build and push Docker image
+      - name: Build and Push Docker Image
         uses: docker/build-push-action@v5
         with:
           context: ./api
           file: ./api/Dockerfile
           push: true
-          tags: ghcr.io/sacireda/todo-app-jdbc-spring-api:latest
+          tags: ghcr.io/${{ secrets.GHCR_USERNAME }}/todo-app-jdbc-spring-api:latest
