--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,15 +10,16 @@ services:
       MYSQL_PASSWORD: todo
     ports:
       - "3306:3306"
-    volumes:
-      - ./schema.sql:/docker-entrypoint-initdb.d/schema.sql
 
   api:
-    build:
-      context: ./api
-      dockerfile: Dockerfile
+    image: ghcr.io/sacireda/todo-app-jdbc-spring-api:latest
     container_name: todo-api
+    restart: always
     depends_on:
       - db
     ports:
       - "8080:8080"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mariadb://db:3306/todo
+      SPRING_DATASOURCE_USERNAME: todo
+      SPRING_DATASOURCE_PASSWORD: todo
